--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/navigation" %>
+    <%= render "shared/flash" %>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+    
   </body>
 </html>
